# sfml-experiment

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  run.sh
src/: main.cpp
src/pch/: sfml-pch.h
